--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="images/logo.png">
+<link rel="icon" type="image/png" href="images/logo .png">
+
+<!-- PWA Manifest -->
+<link rel="manifest" href="manifest.json">
 
 <style>
 :root{
@@ -185,10 +188,10 @@ a{color:inherit;text-decoration:none}
 }
 
 .home-background{width:100%;height:calc(100vh - 70px);display:flex;justify-content:center;align-items:center;
-  background:url('background.jpg') center/cover no-repeat;color:var(--page-bg);text-shadow:0 4px 18px rgba(0,0,0,0.25);
+  background:url('images/background.jpg') center/cover no-repeat;color:var(--page-bg);text-shadow:0 4px 18px rgba(0,0,0,0.25);
   font-size:26px;font-weight:700}
 
-.footer{position:relative;bottom:0;left:0;right:0;height:auto;background:var(--footer-bg);display:flex;align-items:center;justify-content:center;color:var(--page-bg);padding:12px 0;flex-wrap:wrap;position: fixed;}
+.footer{position:fixed;bottom:0;left:0;right:0;height:auto;background:var(--footer-bg);display:flex;align-items:center;justify-content:center;color:var(--page-bg);padding:12px 0;flex-wrap:wrap;}
 .footer a{color:inherit}
 
 #fullscreenBtnNav{
@@ -298,6 +301,13 @@ a{color:inherit;text-decoration:none}
 </footer>
 
 <script>
+if('serviceWorker' in navigator){
+  navigator.serviceWorker.register('service-worker.js')
+  .then(() => console.log('Service Worker Registered'))
+  .catch(err => console.log('SW registration failed', err));
+}
+
+// Main JS functionality
 const sidenav = document.getElementById('mySidenav');
 const overlay = document.getElementById('overlay');
 const pdfViewer = document.getElementById('pdfViewer');
@@ -307,32 +317,20 @@ const openPdfBtn = document.getElementById('openPdfBtn');
 const fullscreenBtnNav = document.getElementById('fullscreenBtnNav');
 const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
 
-function toggleNav(){
-  const opened = sidenav.style.width==='250px';
-  if(opened){sidenav.style.width='0';overlay.style.display='none'}
-  else{sidenav.style.width='250px';overlay.style.display='block'}
-}
+function toggleNav(){ const opened = sidenav.style.width==='250px'; if(opened){sidenav.style.width='0';overlay.style.display='none'} else{sidenav.style.width='250px';overlay.style.display='block'}}
 function closeNav(){sidenav.style.width='0';overlay.style.display='none'}
-
 function showPDF(pdfLink, selectedDiv){
   document.querySelectorAll('.sidenav-link').forEach(n=>n.classList.remove('active'));
   if(selectedDiv) selectedDiv.classList.add('active');
-
   pdfContent.style.display='block';
   homeContent.style.display='none';
   pdfViewer.style.display='block';
   pdfViewer.src = pdfLink;
-
   fullscreenBtnNav.style.display = 'inline-block';
-
-  if(isIOS){
-    openPdfBtn.href = pdfLink;
-    openPdfBtn.style.display='inline-block';
-  } else openPdfBtn.style.display='none';
-
+  if(isIOS){ openPdfBtn.href = pdfLink; openPdfBtn.style.display='inline-block'; }
+  else openPdfBtn.style.display='none';
   if(window.innerWidth<=900) closeNav();
 }
-
 function goHome(link){
   document.querySelectorAll('.sidenav-link').forEach(n=>n.classList.remove('active'));
   if(link) link.classList.add('active');
@@ -341,19 +339,12 @@ function goHome(link){
   openPdfBtn.style.display='none';
   fullscreenBtnNav.style.display='none';
 }
-
 function toggleFullscreen(){
   if(pdfContent.requestFullscreen) pdfContent.requestFullscreen();
   else if(pdfContent.webkitRequestFullscreen) pdfContent.webkitRequestFullscreen();
   else if(pdfContent.msRequestFullscreen) pdfContent.msRequestFullscreen();
 }
-
-function toggleThemeMenu(){
-  const themeMenu = document.getElementById('themeMenu');
-  const themeBtn = document.getElementById('themeBtn');
-  themeMenu.classList.toggle('show');
-}
-
+function toggleThemeMenu(){ document.getElementById('themeMenu').classList.toggle('show'); }
 function setTheme(mode){
   const currentSwatch = document.getElementById('currentSwatch');
   if(mode==='dark'){document.body.classList.remove('theme-colorful');document.body.classList.add('theme-dark');currentSwatch.style.background='#1877f2'}
@@ -361,7 +352,6 @@ function setTheme(mode){
   else{document.body.classList.remove('theme-dark','theme-colorful');currentSwatch.style.background='#1877f2'}
   document.getElementById('themeMenu').classList.remove('show');
 }
-
 function toggleContactDropdown(elem){
   const dropdown = document.getElementById('contactDropdown');
   if(dropdown.style.maxHeight && dropdown.style.maxHeight!=='0px') dropdown.style.maxHeight='0';
