--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- PWA Manifest -->
 <link rel="manifest" href="manifest.json">
 
+<meta name="theme-color" content="#1877f2">
 <style>
 :root{
   --bg-color: #f5f5f5;
@@ -301,11 +302,14 @@ a{color:inherit;text-decoration:none}
 </footer>
 
 <script>
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('service-worker.js')
-  .then(() => console.log('Service Worker Registered'))
-  .catch(err => console.log('SW registration failed', err));
+  if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(() => console.log('Service Worker registered successfully'))
+      .catch(err => console.log('Service Worker registration failed:', err));
+  });
 }
+
 
 // Main JS functionality
 const sidenav = document.getElementById('mySidenav');
