--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="images/logo.png">
+<link rel="Favicon" type="image/png" href="images/logo.png">
 
 <!-- PWA Manifest -->
 <link rel="manifest" href="manifest.json">
@@ -224,12 +224,12 @@ a{color:inherit;text-decoration:none}
 
 <div id="mySidenav" class="sidenav" aria-hidden="true">
   <div class="sidenav-link" onclick="goHome(this)"><i class="fa fa-house"></i><span>Home</span></div>
-  <div class="sidenav-link" onclick="showPDF('pdfs/BMS021 phys 1.pdf', this)"><i class="fa fa-book"></i><span>Physics 1</span></div>
-  <div class="sidenav-link" onclick="showPDF('pdfs/Engineering Chemistry BMS022.pdf', this)"><i class="fa fa-book"></i><span>Engineering Chemistry</span></div>
-  <div class="sidenav-link" onclick="showPDF('pdfs/Engineering drawing MEE121.pdf', this)"><i class="fa fa-book"></i><span>Engineering Drawing</span></div>
-  <div class="sidenav-link" onclick="showPDF('pdfs/Mathematics1-BMS011.pdf', this)"><i class="fa fa-book"></i><span>Mathematics 1</span></div>
-  <div class="sidenav-link" onclick="showPDF('pdfs/mechanics 1 BMS012.pdf', this)"><i class="fa fa-book"></i><span>Mechanics 1</span></div>
-  <div class="sidenav-link" onclick="showPDF('pdfs/Engineering English.pdf', this)"><i class="fa fa-book"></i><span>Engineering English</span></div>
+  <div class="sidenav-link" onclick="showPDF('pdfs/phys.pdf', this)"><i class="fa fa-book"></i><span>Physics 1</span></div>
+  <div class="sidenav-link" onclick="showPDF('pdfs/Chemistry.pdf', this)"><i class="fa fa-book"></i><span>Engineering Chemistry</span></div>
+  <div class="sidenav-link" onclick="showPDF('pdfs/drawing.pdf', this)"><i class="fa fa-book"></i><span>Engineering Drawing</span></div>
+  <div class="sidenav-link" onclick="showPDF('pdfs/Mathematics.pdf', this)"><i class="fa fa-book"></i><span>Mathematics 1</span></div>
+  <div class="sidenav-link" onclick="showPDF('pdfs/mechanics.pdf', this)"><i class="fa fa-book"></i><span>Mechanics 1</span></div>
+  <div class="sidenav-link" onclick="showPDF('pdfs/English.pdf', this)"><i class="fa fa-book"></i><span>Engineering English</span></div>
 
   <div class="sidenav-link" onclick="toggleContactDropdown(this)"><i class="fa fa-phone"></i><span>Contact Us</span></div>
   <div class="contact-dropdown" id="contactDropdown">
