--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body{
   transition: background var(--transition), color var(--transition);
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
-  padding-bottom: 70px;
+  padding-bottom: calc(70px + env(safe-area-inset-bottom));
 }
 a{color:inherit;text-decoration:none}
 .small{font-size:13px;color:var(--muted-text)}
@@ -265,8 +265,8 @@ a{color:inherit;text-decoration:none}
         </div>
       </div>
       <div id="offlineProgress" style="margin-left:10px; font-size:13px; color:var(--muted-text)">
-  تحميل أوفلاين: 0%
-</div>
+        تحميل أوفلاين: 0%
+      </div>
       <div class="theme-option" tabindex="0" onclick="setTheme('dark')" onkeydown="if(event.key==='Enter')setTheme('dark')">
         <div class="theme-swatch" style="background:#242526;border:1px solid rgba(255,255,255,0.06)"></div>
         <div>
@@ -310,16 +310,6 @@ a{color:inherit;text-decoration:none}
 </footer>
 
 <script>
-  if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('service-worker.js')
-      .then(() => console.log('Service Worker registered successfully'))
-      .catch(err => console.log('Service Worker registration failed:', err));
-  });
-}
-
-
-// Main JS functionality
 const sidenav = document.getElementById('mySidenav');
 const overlay = document.getElementById('overlay');
 const pdfViewer = document.getElementById('pdfViewer');
@@ -329,7 +319,7 @@ const openPdfBtn = document.getElementById('openPdfBtn');
 const fullscreenBtnNav = document.getElementById('fullscreenBtnNav');
 const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
 
-function toggleNav(){ const opened = sidenav.style.width==='250px'; if(opened){sidenav.style.width='0';overlay.style.display='none'} else{sidenav.style.width='250px';overlay.style.display='block'}}
+function toggleNav(){ const opened = sidenav.style.width==='250px'; if(opened){sidenav.style.width='0';overlay.style.display='none'} else{sidenav.style.width='250px';overlay.style.display='block'} }
 function closeNav(){sidenav.style.width='0';overlay.style.display='none'}
 function showPDF(pdfLink, selectedDiv){
   document.querySelectorAll('.sidenav-link').forEach(n=>n.classList.remove('active'));
@@ -337,16 +327,13 @@ function showPDF(pdfLink, selectedDiv){
 
   pdfContent.style.display='block';
   homeContent.style.display='none';
-
   fullscreenBtnNav.style.display = 'inline-block';
 
   if(isIOS){
-    // على iOS، ما نعرضش iframe مباشرة، استخدم زر Open PDF
     pdfViewer.style.display='none';
     openPdfBtn.href = pdfLink;
     openPdfBtn.style.display='inline-block';
   } else {
-    // على باقي الأجهزة
     pdfViewer.src = pdfLink;
     pdfViewer.style.display='block';
     openPdfBtn.style.display='none';
@@ -354,7 +341,6 @@ function showPDF(pdfLink, selectedDiv){
 
   if(window.innerWidth<=900) closeNav();
 }
-
 function goHome(link){
   document.querySelectorAll('.sidenav-link').forEach(n=>n.classList.remove('active'));
   if(link) link.classList.add('active');
@@ -371,44 +357,27 @@ function toggleFullscreen(){
 function toggleThemeMenu(){ document.getElementById('themeMenu').classList.toggle('show'); }
 function setTheme(mode){
   const currentSwatch = document.getElementById('currentSwatch');
-  if(mode==='dark'){document.body.classList.remove('theme-colorful');document.body.classList.add('theme-dark');currentSwatch.style.background='#1877f2'}
-  else if(mode==='colorful'){document.body.classList.remove('theme-dark');document.body.classList.add('theme-colorful');currentSwatch.style.background='linear-gradient(90deg,#87c6ff,#7bd3d6)'}
-  else{document.body.classList.remove('theme-dark','theme-colorful');currentSwatch.style.background='#1877f2'}
-  document.getElementById('themeMenu').classList.remove('show');
+  if(mode==='light'){ document.body.className=''; currentSwatch.style.background='var(--accent)'; }
+  else if(mode==='dark'){ document.body.className='theme-dark'; currentSwatch.style.background='#242526'; }
+  else if(mode==='colorful'){ document.body.className='theme-colorful'; currentSwatch.style.background='linear-gradient(90deg,#87c6ff,#7bd3d6)'; }
 }
-function toggleContactDropdown(elem){
+
+function toggleContactDropdown(link){
   const dropdown = document.getElementById('contactDropdown');
-  if(dropdown.style.maxHeight && dropdown.style.maxHeight!=='0px') dropdown.style.maxHeight='0';
-  else dropdown.style.maxHeight=dropdown.scrollHeight+'px';
+  const expanded = dropdown.style.maxHeight && dropdown.style.maxHeight !== '0px';
+  dropdown.style.maxHeight = expanded ? '0' : dropdown.scrollHeight + 'px';
 }
-navigator.serviceWorker.addEventListener('message', event => {
-  if(event.data.type === 'PROGRESS'){
-    document.getElementById('offlineProgress').innerText = `تحميل أوفلاين: ${event.data.percent}%`;
-  }
-});
-// عنصر النافبار لعرض نسبة التحميل
-const cacheProgress = document.createElement('div');
-cacheProgress.id = 'cacheProgress';
-cacheProgress.style = 'position:fixed;top:70px;left:0;width:100%;height:4px;background:#ccc;';
-document.body.appendChild(cacheProgress);
+</script>
 
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/sw.js').then(reg => {
-    console.log('SW registered');
-  });
-
-  navigator.serviceWorker.addEventListener('message', event => {
-    if (event.data.type === 'CACHE_PROGRESS') {
-      const progress = event.data.progress;
-      cacheProgress.style.width = progress + '%';
-      cacheProgress.style.background = 'linear-gradient(90deg, #1877f2 ' + progress + '%, #ccc ' + (100-progress) + '%)';
-      if (progress === 100) {
-        setTimeout(() => cacheProgress.remove(), 1000);
-      }
-    }
+<script>
+// Register Service Worker (single registration)
+if('serviceWorker' in navigator){
+  navigator.serviceWorker.register('service-worker.js').then(reg=>{
+    console.log('SW registered:', reg);
+  }).catch(err=>{
+    console.warn('SW registration failed:', err);
   });
 }
-
 </script>
 
 </body>
